; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_vm_page_alloc_guard.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_vm_page_alloc_guard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VM_PAGE_NULL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @vm_page_alloc_guard(i32 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @vm_object_lock_assert_exclusive(i32 %7)
  %9 = call i64 (...) @vm_page_grab_guard()
  store i64 %9, i64* %6, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* @VM_PAGE_NULL, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i64, i64* @VM_PAGE_NULL, align 8
  store i64 %14, i64* %3, align 8
  br label %21

15:                                               ; preds = %2
  %16 = load i64, i64* %6, align 8
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @vm_page_insert(i64 %16, i32 %17, i32 %18)
  %20 = load i64, i64* %6, align 8
  store i64 %20, i64* %3, align 8
  br label %21

21:                                               ; preds = %15, %13
  %22 = load i64, i64* %3, align 8
  ret i64 %22
}

declare dso_local i32 @vm_object_lock_assert_exclusive(i32) #1

declare dso_local i64 @vm_page_grab_guard(...) #1

declare dso_local i32 @vm_page_insert(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
